# va108xx-hal-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  jlink.gdb  memory.x
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml
automation/: Dockerfile  Jenkinsfile
examples/: blinky-pac.rs  blinky.rs  cascade.rs  pwm.rs  rtic-empty.rs  rtt-log.rs  spi.rs  tests.rs  timer-ticks.rs  uart-irq-rtic.rs  uart.rs
src/: clock.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  spi.rs  time.rs  timer.rs  typelevel.rs  uart.rs  utility.rs
src/gpio/: dynpins.rs  mod.rs  pins.rs  reg.rs
test/DueSerialTest/: README.md  platformio.ini
test/DueSerialTest/src/: main.cpp
