[package]
name = "va108xx-hal"
version = "0.2.3"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2021"
description = "HAL for the Vorago VA108xx family of microcontrollers"
homepage = "https://github.com/robamu-org/va108xx-hal-rs"
repository = "https://github.com/robamu-org/va108xx-hal-rs"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "hal", "cortex-m", "vorago", "va108xx"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nb = "1"
paste = "1.0"
embedded-hal = { features = ["unproven"], version = "0.2.6" }
void = { version = "1.0", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
libm = "0.2.1"

[dependencies.va108xx]
version = "0.2.4"

[features]
rt = ["va108xx/rt"]

[dev-dependencies]
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-halt = "0.2"

[profile.dev]
debug = true
lto = false

[profile.release]
lto = true
debug = true
opt-level = "s"

[[example]]
name = "timer-ticks"
required-features = ["rt"]

[[example]]
name = "tests"
required-features = ["rt"]

[[example]]
name = "pwm"
required-features = ["rt"]

[[example]]
name = "cascade"
required-features = ["rt"]
