[package]
name = "va108xx-hal"
version = "0.5.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2021"
description = "HAL for the Vorago VA108xx family of microcontrollers"
homepage = "https://egit.irs.uni-stuttgart.de/rust/va108xx-hal"
repository = "https://egit.irs.uni-stuttgart.de/rust/va108xx-hal"
license = "Apache-2.0"
keywords = ["no-std", "hal", "cortex-m", "vorago", "va108xx"]
categories = ["aerospace", "embedded", "no-std", "hardware-support"]

[dependencies]
va108xx = "0.2.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
nb = "1"
paste = "1.0"
libm = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.once_cell]
version = "1.12.0"
default-features = false

[features]
rt = ["va108xx/rt"]

[dev-dependencies]
cortex-m-rtic = "1.1.2"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-halt = "0.2"

[profile.dev]
debug = true
lto = false

[profile.release]
# Problematic because RTT won't work
lto = false
debug = true
opt-level = "s"

# Commented until named-profiles feature is stabilized
# [profile.release-lto]
# inherits = "release"
# lto = true

[[example]]
name = "timer-ticks"
required-features = ["rt"]

[[example]]
name = "tests"
required-features = ["rt"]

[[example]]
name = "cascade"
required-features = ["rt"]

[[example]]
name = "uart-irq-rtic"
required-features = ["rt"]
